--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -325,7 +325,8 @@
     width: 700px;
     margin: auto; 
     display: flex;
-    padding-bottom: 50px;
+    padding-bottom: 100px;
+    padding-top: 50px;
 }
 
 .contact-box{
@@ -365,7 +366,7 @@
 /* Map section */
 .map__img{
     width: 100%;
-    height: 600px;
+    height: auto;
     margin-bottom: 100px;
 }
 
@@ -373,13 +374,18 @@
 /* Footer */
 #footer{
     background-color: var(--white-color);
-    display: flex;
-    justify-content: center;
+    width: 700px;
+    height: 150px;
+    text-align: center;
+    margin: auto;
 }
 
 .footer__icon{
+    height: 24px;
     font-size: 1.6rem;
     color: var(--black-color);
-    /* margin: auto; */
-    width: 700px;
+    padding: 0 8px 0 0;
+}
+
+.footer__policy-text{
 }
